themes/default/css/global.css
/* ... */
td>.box, .right .box:first-child:last-child, .left .box:first-child:last-child {
	margin: 0;
}
/* Accordion boxes don't have margins */
.box___standardbox_accordion {
	margin: 0 !important;
}
/* Don't do margins for boxes at the end of frames */
/*#standalone_html_wrap>div>.box:first-child {	Actually we want this, due to how .fp_col_block has been written
	margin-top: 0;
}*/
#standalone_html_wrap>div>.box:last-child {
	margin-bottom: 0;
}

/* Don't let boxes on side panels get too much styling (focuses the eye away) */
.global_side_panel .box, .box.nested {
	background-color: {$GET,area_5_background};
}
.box.nested {
	border: 1px solid {$GET,pale_border};
}
.global_side_panel .box_inner>h1, .global_side_panel .box_inner>h2, .global_side_panel .box_inner>h3, .global_side_panel .box_inner>h4, .global_side_panel .box_inner>h5, .global_side_panel .box_inner>h6, .global_side_panel .box>.toggleable_tray_title {
	background-image: none;
}

.box>.box_inner, .box>.toggleable_tray {
	margin: 5px; /* not em so that header may be positioned properly */
}
.boxless_space .box>.box_inner, .boxless_space .box>.toggleable_tray {
	margin: 0;
}
.email_body .box .box_inner { /* Outlook.com does not support margins or complex use of the sibling selector */
	margin: 0;
	padding: 5px; /* not em so that header may be positioned properly */
}

.box_inner>h1, .box_inner>h2, .box_inner>h3, .box_inner>h4, .box_inner>h5, .box_inner>h6, .toggleable_tray_title, #standalone_html_wrap .box .box .box_inner>h2, #standalone_html_wrap .box .box .box_inner>h3 {
	{$BETA_CSS_PROPERTY,border-top-left-radius: 3px;}
	{$BETA_CSS_PROPERTY,border-top-right-radius: 3px;}
	background-color: {$GET,box_title_background};
	background-image: url('{$IMG_INLINE;,gradient}');
	background-repeat: repeat-x;
	{$BETA_CSS_PROPERTY,background-image: linear-gradient(to bottom\, {$GET,lgrad}\, {$GET,dgrad});}
	color: {$GET,box_title_text};
	text-align: center;
	font-weight: bold;
	text-decoration: none;
	font-size: 1em;
	border: 0;
	letter-spacing: 0;

	/* .box_inner set us in the wrong position, so fiddle around a bit to move us back to be flush */
	margin: -5px 0 5px -5px;
	padding: 0.4em 0.8em 0.4em 0.3em;
	width: 100%;
}
.box_inner>h2>.right .button_screen {
	vertical-align: top;
}
.box.box_prominent>.box_inner {
	margin: 0;
}
.box.box_prominent>.box_inner>h2 {
	padding: 0.8em;
	margin: 0;
	text-align: left;
	font-size: 1.15em;
	font-weight: normal;
}

.box_inner>h1 a, .box_inner>h2 a, .box_inner>h3 a, .box_inner>h4 a, .box_inner>h5 a, .box_inner>h6 a, .toggleable_tray_title a, .box_inner>h1 a:visited, .box_inner>h2 a:visited, .box_inner>h3 a:visited, .box_inner>h4 a:visited, .box_inner>h5 a:visited, .box_inner>h6 a:visited, .toggleable_tray_title a:visited {
	color: inherit;
	text-decoration: underline;
}
a.toggleable_tray_button { /* Override above for toggleable_tray_button */
	text-decoration: none !important;
}
.box_inner>h1 a:hover, .box_inner>h2 a:hover, .box_inner>h3 a:hover, .box_inner>h4 a:hover, .box_inner>h5 a:hover, .box_inner>h6 a:hover, .toggleable_tray_title a:hover {
	color: {$GET,box_title_text_hover};
}
.boxless_space .box_inner>h1 a:hover, .boxless_space .box_inner>h2 a:hover, .boxless_space .box_inner>h3 a:hover, .boxless_space .box_inner>h4 a:hover, .boxless_space .box_inner>h5 a:hover, .boxless_space .box_inner>h6 a:hover, .boxless_space .toggleable_tray_title a:hover {
	color: inherit;
}

/* If we want a box to stand out less, give it 'pale_box' */
.pale_box.box, .pale_box .box {
	border: 1px solid {$GET,pale_border} !important;
}
.pale_box.box h2, .pale_box .box h2, .pale_box.box h3, .pale_box .box h3 {
	background-color: {$GET,point_of_interest_background} !important;
	background-image: none;
	color: {$GET,area_key_text} !important;
}

/* If you want to mark a region as box-less, wrap a div with class 'boxless_space' around it -- it'll invoke a very different kind of modern styling */
.boxless_space .box {
	background: none;
	border: none !important;
	padding: 0;
	margin: 1em 0; /* Big margin, necessary as the boxes have no border around them */
	{$BETA_CSS_PROPERTY,border-radius: 0;}
}
.frame>.boxless_space .box:first-child {
	margin-top: 0; /* No top margin for boxes in a frame */
}
.boxless_space>.box:last-child {
	margin-bottom: 0; /* No margin on the last box */
}
.boxless_space .fp_col_blocks_wrap .box {
	margin: 0.5em 0; /* Half-sized margins for the fake-columns on front pages, as the overflow blocks margin collapsing */
}
.boxless_space .box>.box_inner {
	margin: 0;
}
.boxless_space .box>.box_inner>h1, .boxless_space .box>.box_inner>h2, .boxless_space .box>.box_inner>h3, .boxless_space .box>.box_inner>h4, .boxless_space .box>.box_inner>h5, .boxless_space .box>.box_inner>h6, .boxless_space .box>.toggleable_tray_title {
	background: url('{$IMG_INLINE;,1x/boxless_title_leadin_rightcomp}') no-repeat !important;
	color: {$GET,slightly_seeded_right_complement_text} !important;
	text-align: {!en_left};
	font-size: 15px;
	margin: 0.5em 0 !important;
	font-family: Arial;
	padding: 1px 0 2px 21px !important;
	width: auto;
	font-weight: bold;
	text-transform: uppercase;
	{$BETA_CSS_PROPERTY,border-radius: 0;}
}
.global_side_panel .boxless_space .box>.box_inner>h1, .global_side_panel .boxless_space .box>.box_inner>h2, .global_side_panel .boxless_space .box>.box_inner>h3, .global_side_panel .boxless_space .box>.box_inner>h4, .global_side_panel .boxless_space .box>.box_inner>h5, .global_side_panel .boxless_space .box>.box_inner>h6,
.boxless_space .box .box>.box_inner>h1, .boxless_space .box .box>.box_inner>h2, .boxless_space .box .box>.box_inner>h3, .boxless_space .box .box>.box_inner>h4, .boxless_space .box .box>.box_inner>h5, .boxless_space .box .box>.box_inner>h6 {
	background: url('{$IMG_INLINE;,1x/boxless_title_leadin_leftcomp}') no-repeat !important;
	color: {$GET,slightly_seeded_left_complement_text} !important;
}
/* ... */

